MSGCNTR-167 i18n errors when composing and forwarding e-mails
MSGCNTR-264
Missing keys displayed under Messages/compose to end user

merging into 2.6x


git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/sakai_2-6-x@74485 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -532,3 +532,6 @@ print_url=javascript:window.print()
 
 cdfm_state_inconsistent=Unable to complete your request because it appears you are using multiple tabs. Please close all your browser windows and try again. If you were not using multiple tabs, please contact your system administrator.
 
+all_participants_desc=All Participants
+participants_group_desc=Group
+participants_role_desc=Role
