MSGCNTR-146 uninternationalized strings (Role, Group, All participants)
merged patch for 2.5.x


git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/sakai_2-5-x@75288 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -458,6 +458,10 @@ pvt_email_footer2=Messages from the
 pvt_email_footer3=site.
 pvt_email_footer4=To reply to this message click this link to access Messages for this site:
 
+pvt_all_participants=All Participants
+pvt_role=Role
+pvt_group=Group
+
 syn_mark_as_read=Mark all as read
 syn_site_heading=Site
 syn_private_heading=Messages
