--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -34,6 +34,7 @@ cdfm_button_bar_reply_to_topic = Reply to Topic
 cdfm_button_bar_reply_to_thread = Reply to Thread
 cdfm_button_bar_delete_msg = Delete
 cdfm_button_bar_grade = Grade
+cdfm_button_bar_insert_text=Insert Original Message Text
 cdfm_button_bar_post_revised_msg = Post Edited Message
 cdfm_button_bar_approve = Approve
 cdfm_button_bar_deny = Deny
