MSGCNTR-284 Incorrect alert message when folder contains no meesages and is about to be deleted.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@75741 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -488,7 +488,7 @@ pvt_create_diff_folder_name = Please enter a different folder name. Sent, Receiv
 pvt_folder_name_blank = Folder name cannot be blank.
 pvt_enter_new_folder_name = Please enter a value for Folder Title.
 pvt_enter_shorter_folder_name = The folder title should be less than 100 characters.
-pvt_delete_folder_confirm = The folder contains messages that will also be deleted! Are you sure you want to delete the following folder and its contents?
+pvt_delete_folder_confirm = The folder may contain messages that will also be deleted! Are you sure you want to delete the following folder and its contents?
 pvt_no_delete_revise_folder = You cannot Edit or Delete this folder.
 pvt_provide_email_addr = Please provide a valid email address
 pvt_confirm_perm_msg_delete = Are you sure you want to permanently delete the following message(s)?
