--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -199,6 +199,7 @@ cdfm_insufficient_privileges_revise_message=Insufficient privileges to revise th
 cdfm_insufficient_privileges_change_forum=Insufficient privileges to change forum settings
 cdfm_insufficient_privileges_create_topic=Insufficient privileges to create new topic
 cdfm_insufficient_privileges_new_topic=Insufficient privileges to change topic settings
+cdfm_insufficient_privileges_post_thread=Insufficient privileges to post a thread to topic {0}
 cdfm_user_not_allowed_create_forum=User is not allowed to create a new forum
 cdfm_invalid_selected_forum=Invalid forum selected
 cdfm_forum_not_found=Forum not found
