MSGCNTR-180 Need better error handling when a user posts a message right after it's been locked
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@75783 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -200,6 +200,9 @@ cdfm_insufficient_privileges_change_forum=Insufficient privileges to change foru
 cdfm_insufficient_privileges_create_topic=Insufficient privileges to create new topic
 cdfm_insufficient_privileges_new_topic=Insufficient privileges to change topic settings
 cdfm_insufficient_privileges_post_thread=Insufficient privileges to post a thread to topic {0}
+cdfm_topic_locked=Topic {0} is locked.
+cdfm_forum_locked=Forum {0} is locked.
+cdfm_error_posting_thread=An error has occurred while posting a thread.
 cdfm_user_not_allowed_create_forum=User is not allowed to create a new forum
 cdfm_invalid_selected_forum=Invalid forum selected
 cdfm_forum_not_found=Forum not found
