MSGCNTR-125 Displayed dates/times does not respect user selected Time Zone. -applied the patch to trunk.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@77194 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -189,6 +189,7 @@ date_format=MMM d, yyyy h:mm a
 date_format_date=MMM d, yyyy
 date_format_time=h:mm a
 date_format_paren=\ (MMM d, yyyy h:mm a)\ 
+date_format_static=MMM d, yyyy h:mm a z
 df_view=View
 cdfm_valid_forum_title_warn=Please enter a valid forum title
 cdfm_valid_topic_title_warn=Please enter a valid topic title
@@ -460,7 +461,7 @@ pvt_priority_high = High
 pvt_select_addtl_recipients = Select Additional Recipients
 #SAKAI-10505
 pvt_select_forward_recipients = Select Forward Recipients
-pvt_time_format= MM/dd/yy 'at' HH:mm:ss
+pvt_time_format= MM/dd/yy 'at' HH:mm:ss z
 pvt_prev_msg =< Previous Message
 pvt_next_msg = Next Message >
 pvt_msgs_label = Messages - 
