MSGCNTR-345 Use new method for Forum Word Count
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@80623 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -17,7 +17,7 @@ cdfm_title=Title
 cdfm_empty_title_error=Title cannot be empty.
 cdfm_message=Message
 cdfm_message_insert=Insert original text
-cdfm_message_count=Count words
+cdfm_message_count=Word Count
 cdfm_message_count_words=Words:
 cdfm_message_count_chars=Characters:
 cdfm_message_count_update: Update word count
