MSGCNTR-309 Start and End dates on Forums and Topics
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@81714 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -152,6 +152,9 @@ cdfm_info_required_sign=*
 cdfm_forum_title=Forum Title
 cdfm_forum_posting=Forum Posting
 cdfm_forum_mark_read=Mark Threads Read
+cdfm_forum_availability=Availability
+cdfm_forum_avail_show=Show - display immediately with no time restriction 
+cdfm_forum_avail_date=Specify Dates - begin display on (optionally) specified Beginning Date/Time; hide display after (optionally) specified Ending Date/Time
 cdfm_shortDescription=Short Description (255 characters max)
 cdfm_shortDescriptionCharsRem=%1 chars remain
 cdfm_fullDescription=Description
@@ -640,3 +643,11 @@ javax.faces.validator.LengthValidator.MINIMUM=Validation Error: Field does not h
 all_participants_desc=All Participants
 participants_group_desc=Group
 participants_role_desc=Role
+
+msgs.area_restricted_message=Template is in restricted availability mode
+msgs.forum_restricted_message=Forum is in restricted availability mode
+msgs.topic_restricted_message=Topic is in restricted availability mode
+msgs.pickDate=Pick a Date
+msgs.openDate=Open Date
+msgs.closeDate=Close Date
+endDateBeforeOpenDate=Open Date is not allowed to be before Close Date.
