MSGCNTR-309 Start and End dates on Forums and Topics
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@81747 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -644,10 +644,10 @@ all_participants_desc=All Participants
 participants_group_desc=Group
 participants_role_desc=Role
 
-msgs.area_restricted_message=Template is in restricted availability mode
-msgs.forum_restricted_message=Forum is in restricted availability mode
-msgs.topic_restricted_message=Topic is in restricted availability mode
-msgs.pickDate=Pick a Date
-msgs.openDate=Open Date
-msgs.closeDate=Close Date
+area_restricted_message=Template is in restricted availability mode
+forum_restricted_message=Forum is in restricted availability mode
+topic_restricted_message=Topic is in restricted availability mode
+pickDate=Pick a Date
+openDate=Open Date
+closeDate=Close Date
 endDateBeforeOpenDate=Open Date is not allowed to be before Close Date.
