--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -651,3 +651,7 @@ pickDate=Pick a Date
 openDate=Open Date
 closeDate=Close Date
 endDateBeforeOpenDate=Open Date is not allowed to be before Close Date.
+
+# preview:
+pvt_preview=Preview
+pvt_back=Back
