MSGCNTR-358 Update Portuguese (pt_PT) message bundles
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@81945 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_pt_PT.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_pt_PT.properties
@@ -1,5 +1,6 @@
 #Stored by I18NEdit, may be edited!
 all_participants_desc=Todos os participantes
+area_restricted_message=Modelo em modo de disponibilidade restricta
 cdfm_access=Acesso
 cdfm_add_button=Adicionar ->
 cdfm_add_comment=Adicionar coment\u00E1rio \u00E0 mensagem recusada
@@ -77,10 +78,14 @@ cdfm_display_options=Op\u00E7\u00F5es de visualiza\u00E7\u00E3o
 cdfm_draft=RASCUNHO
 cdfm_drafts=Rascunhos
 cdfm_empty_title_error=T\u00EDtulo n\u00E3o pode ser vazio.
+cdfm_error_posting_thread=Ocorreu um erro ao adicionar \u00E0 lista de discuss\u00E3o.
 cdfm_failed_create_topic=Falhou a cria\u00E7\u00E3o do novo t\u00F3pico
 cdfm_failed_new_topic=Falhou a cria\u00E7\u00E3o do novo t\u00F3pico\!
 cdfm_failed_rend_message=Falhou a visualiza\u00E7\u00E3o de mensagens
 cdfm_flat_view=Mostrar mensagens completas
+cdfm_forum_avail_date=Entre datas - (opcionalmente) mostrar a partir da Data de \u00CDnicio; (opcionalmente) esconder ap\u00F3s a Data Final
+cdfm_forum_avail_show=Mostrar - mostrar imediatamente sem restri\u00E7\u00E3o de tempo
+cdfm_forum_availability=Disponibilidade
 cdfm_forum_locked=Este f\u00F3rum est\u00E1 bloqueado
 cdfm_forum_mark_read=Marcas discuss\u00F5es como lidas
 cdfm_forum_moderated_flag=( Moderado )
@@ -114,6 +119,7 @@ cdfm_insufficient_privileges_create_topic=Privil\u00E9gios insuficientes para cr
 cdfm_insufficient_privileges_delete_forum=Privil\u00E9gios insuficientes para eliminar este f\u00F3rum
 cdfm_insufficient_privileges_delete_msg=N\u00E3o tem permiss\u00F5es para eliminar esta mensagem.
 cdfm_insufficient_privileges_new_topic=Privil\u00E9gios insuficientes para modificar op\u00E7\u00F5es por defeito
+cdfm_insufficient_privileges_post_thread=N\u00E3o tem previl\u00E9gios suficientes para adicionar uma discuss\u00E3o ao t\u00F3pico {0}
 cdfm_insufficient_privileges_revise_message=N\u00E3o tem permiss\u00F5es para editar esta mensagem
 cdfm_insufficient_privileges_view_forum=O F\u00F3rum que pretende visualizar n\u00E3o est\u00E1 dispon\u00EDvel. Por favor contacte o seu docente spse tiver alguma quest\u00E3o.
 cdfm_insufficient_privileges_view_topic=O T\u00F3pico do F\u00F3rum que pretende visualizar n\u00E3o est\u00E1 dispon\u00EDvel. Por favor contacte o seu docente spse tiver alguma quest\u00E3o.
@@ -234,6 +240,7 @@ cdfm_toolbar_separator=|
 cdfm_topic_allow_anonymous_postings=Permitir mensagens de an\u00F3nimos (identidade conhecida para utilizadores de administra\u00E7\u00E3o)
 cdfm_topic_annonymous_responses=Respostas an\u00F3nimas
 cdfm_topic_author_identity=N\u00E3o desejo saber a identidade dos autores
+cdfm_topic_locked=O T\u00F3pico {0] est\u00E1 bloqueado.
 cdfm_topic_moderated_flag=; Moderado
 cdfm_topic_post_before_reading=Criar antes de ler
 cdfm_topic_post_before_reading_desc=Os utilizadores devem responder antes de ler as restantes respostas
@@ -253,10 +260,12 @@ cdfm_view=Ver
 cdfm_view_under_construct=Esta vista est\u00E1 em constru\u00E7\u00E3o
 cdfm_yes=Sim
 cdfm_your_message=A sua mensagem
+closeDate=Data de Fecho
 close_window=Fechar janela
 date_format=yyyy-MM-dd HH\:mm
 date_format_date=yyyy-MM-dd
 date_format_paren=\ (yyyy-MM-dd HH\:mm) 
+date_format_static=MMM d, yyyy h\:mm a z
 date_format_time=HH\:mm
 default_forum=F\u00F3rum {0}
 default_topic=Discuss\u00E3o Geral
@@ -269,6 +278,8 @@ email.body.redirect1=Aceda ao f\u00F3rum para
 email.fromAddress=no-reply@{0}
 email.fromName=Plataforma
 email.subject=Nova mensagem enviada para {0} por {1}
+endDateBeforeOpenDate=Data de \u00CDnico n\u00E3o pode ocorrer antes da Data de Fecho
+forum_restricted_message=F\u00F3rum em modo de disponibilidade restricta
 javax.faces.validator.LengthValidator.MAXIMUM=Erro de valida\u00E7\u00E3o\: o campo tem mais caracteres do que o m\u00E1ximo permitido ({0} caracteres)
 javax.faces.validator.LengthValidator.MINIMUM=Erro de valida\u00E7\u00E3o\: o campo n\u00E3o tem o m\u00EDnimo de caracteres necess\u00E1rio
 loading_wait=A carregar...
@@ -295,6 +306,7 @@ msg_view_unread=Apenas n\u00E3o lidas
 notify_for_all_postings=Enviar-me uma notifica\u00E7\u00E3o quando \u00E9 enviada uma mensagem
 notify_for_postings_to_my_thread=Enviar-me uma notifica\u00E7\u00E3o quando \u00E9 enviada uma mensagem para uma discuss\u00E3o para a qual participei
 notify_none=N\u00E3o enviar notifica\u00E7\u00F5es
+openDate=Data de \u00CDnicio
 participants_group_desc=Grupo
 participants_role_desc=Perfil
 perm_all=Todas
@@ -321,6 +333,7 @@ perm_revise_own=Editar do pr\u00F3prio
 perm_revise_postings=Editar mensagens
 perm_role=Perfil
 perm_role_label=Perfil\:
+pickDate=Seleccione uma data
 print_friendly=Ver formato para impress\u00E3o da p\u00E1gina actual
 print_url=javascript\:window.print()
 pvtMsgListSummary=Lista de mensagens. Cada linha representa um item. Coluna 1\: caixa para seleccionar item. Coluna 2\: indica se esta mensagem tem anexos. Coluna 3\: t\u00EDtulo que pode ser clicado para ver esta mensagem. Coluna 4\: destinat\u00E1rio ou autor da mensagem. Coluna 5\: data de envio da mensagem. Coluna 6\: prioridade da mensagem.
@@ -336,6 +349,7 @@ pvt_atttype=Tipo
 pvt_authby=Autor
 pvt_autofor=Reencaminhamento autom\u00E1tico
 pvt_autofor1=Reencaminhamento autom\u00E1tico\:
+pvt_back=Voltar
 pvt_beg_date=Data de in\u00EDcio
 pvt_bktolist=Voltar \u00E0 lista
 pvt_body=Corpo da mensagem
@@ -427,6 +441,7 @@ pvt_perm_deleted_success=Mensagem(s) eliminada(s) com sucesso.
 pvt_pntformat=Formato para impress\u00E3o
 pvt_prev_folder=< Pasta anterior
 pvt_prev_msg=< Mensagem anterior
+pvt_preview=Pr\u00E9-visualizar
 pvt_priority_high=Alta
 pvt_priority_low=Baixa
 pvt_priority_normal=Normal
@@ -524,9 +539,9 @@ syn_cancel=Cancelar
 syn_change_submit=Actualizar op\u00E7\u00F5es
 syn_date_heading=\u00DAltima visita
 syn_directions=Para esconder as notifica\u00E7\u00F5es das Mensagens & F\u00F3rums de uma \u00E1rea, seleccione a \u00E1rea de 'Notifica\u00E7\u00F5es de \u00E1rea n\u00E3o vis\u00EDveis' e utilize a seta direita para mover a \u00E1rea para 'Notifica\u00E7\u00F5es de \u00E1rea vis\u00EDveis'. Clique em 'Actualizar op\u00E7\u00F5es'.
-syn_discussion_heading=F\u00F3rums
-syn_goto_forums=Ir para os F\u00F3rums
-syn_goto_mc=Ir para Message & Forums
+syn_discussion_heading=F\u00F3runs
+syn_goto_forums=Ir para os F\u00F3runs
+syn_goto_mc=Ir para Mensagens & F\u00F3runs
 syn_goto_messages=Ir para as mensagens
 syn_goto_site=Ir para a \u00E1rea
 syn_hide=N\u00E3o mostrar
@@ -555,7 +570,8 @@ syn_tool_link_begin=<a href\="\#" onclick\="javascript\:window.parent.location.h
 syn_update=Actualizar
 synopticToolDisabled=A funcionalidade de efectuar a contagem de mensagens novas foi temporariamente desactivada na \u00C1rea Pessoal. No entanto, est\u00E3o dispon\u00EDveis notifica\u00E7\u00F5es de mensagens na p\u00E1gina 'Home' de qualquer \u00E1rea.
 synoptic_no_activity=Nenhuma actividade recente nas suas \u00E1reas.
-synoptic_no_tools=A ferramenta de mensagens/f\u00F3runs n\u00E3o existe nesta \u00E1rea.
+synoptic_no_tools=Nem a ferramenta de Mensagens nem a de F\u00F3runs existe nesta \u00E1rea.
+topic_restricted_message=T\u00F3pico em modo de disponibilidade restricta
 viewSynopticInfo=Mostrar-me as mensagens novas
 wait_icon=images/wait_sakai.gif
 watch=Notifica\u00E7\u00F5es
