MSGCNTR-309 Start and End dates on Forums and Topics
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.8.x@81948 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -650,7 +650,7 @@ topic_restricted_message=Topic is in restricted availability mode
 pickDate=Pick a Date
 openDate=Open Date
 closeDate=Close Date
-endDateBeforeOpenDate=Open Date is not allowed to be before Close Date.
+endDateBeforeOpenDate=Close Date is not allowed to be before Open Date.
 
 # preview:
 pvt_preview=Preview
