MSGCNTR-390 Allow instructor to duplicate forum or topic Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@84255 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -98,6 +98,11 @@ cdfm_discussion_forums=Forums
 cdfm_discussion_forums_old=Discussion Forums
 cdfm_new_forum=New Forum
 cdfm_new_topic=New Topic
+cdfm_duplicate_topic=Duplicate Topic
+cdfm_duplicate_forum=Duplicate Forum
+cdfm_duplicate_topic_confirm=Are you sure you wish to duplicate this topic?
+cdfm_duplicate_forum_confirm=Are you sure you wish to duplicate this forum?
+cdfm_insufficient_privileges_duplicate=You do not have privileges to duplicate this.
 cdfm_organize=Organize
 cdfm_statistics=Statistics
 cdfm_template_setting=Template Settings
