MSGCNTR-423 .anon role crashes synoptic info
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@86176 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -390,6 +390,7 @@ pvt_organize= Organize
 pvt_statistics= Statistics 
 pvt_settings= Settings 
 pvt_compose= Compose Message 
+pvt_anon_warning=This tool does not support anonymous users
 pvt_newfolder= New Folder 
 pvt_foldersettings= Folder Settings
 pvt_search = Search
