MSGCNTR-411 Post First Option in Forums Applied patch for new feature
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@86655 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -168,6 +168,8 @@ cdfm_settings_instruction=Required items marked with
 cdfm_lock_forum=Lock Forum (Disable forum postings)
 cdfm_moderate_forum=Moderate Topics in Forum
 cdfm_moderate_forums=Moderate Topics in Forums
+cdfm_postFirst=Users must post before reading
+cdfm_postFirst_warning=You must post to this topic before you can view any messages
 cdfm_auto_mark_threads_read=Automatically Mark All Messages in a Thread as Read
 cdfm_button_bar_save_setting=Save
 cdfm_button_bar_save_draft=Save Draft
