MSGCNTR-401 Add new Property to prevent users from using Generic Recipients in "To" field (all participants, etc) Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@86722 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -664,3 +664,7 @@ endDateBeforeOpenDate=Close Date is not allowed to be before Open Date.
 # preview:
 pvt_preview=Preview
 pvt_back=Back
+
+#properties
+pvt_properties_desc=Set permissions for the Messages tool
+pvt_permissions=Permissions
