MSGCNTR-329 Message sent to students is no longer treated as a BCC Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@88696 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -442,6 +442,11 @@ pvt_attrem= Remove
 pvt_attsize= Size
 pvt_atttype= Type
 pvt_to= To
+pvt_bcc=Bcc
+pvt_removeBcc=Remove Bcc
+pvt_addBcc=Add Bcc
+pvt_bccClear=Clear Selection
+pvt_bccUndisclosed=Undisclosed-Recipients
 #reply all
 pvt_to_cc= Cc
 pvt_replyto= Replying To
