MSGCNTR-403 Grading Forums - Easier way to view all messages from one person and enter grade in one screen, or view list of all users with counts of posts and grade entry box
Applied patch

git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@89232 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -52,13 +52,25 @@ cdfm_moderator_comment_text = Comment By
 cdfm_moderate = Moderate
 cdfm_mark_as_read=Mark as Read
 cdfm_readby= - Read by: 
-stat_list = Statistics
+stat_list = Statistics & Grading
 stat_name = Name
 stat_authored = Authored
 stat_read = Read
 stat_unread = Unread
 stat_percent_read = Percent Read
 stat_forum_title = Forum Title
+stat_forum_word_count=Word Count
+stat_forum_comments=Comments
+stat_forum_na=N/A
+stat_forum_comments_hide=Hide Comments
+stat_forum_comments_show=Show Comments
+stat_forum_comments_hidden=--Hidden--
+stat_forum_no_gbitem=-------
+stat_forum_submit_grades=Submit Grades
+stat_forum_submit_grades_cancel=Cancel Changes
+stat_forum_default_grade=Apply Grade to all Ungraded
+stat_forum_default_grade_info=You must submit the grades to save your changes.
+stat_forum_details=Details
 stat_topic_title = Topic Title
 stat_forum_date = Date
 stat_forum_subject = Subject
@@ -77,7 +89,9 @@ stat_no_read_message=No read messages
 stat_display_in_thread=[display in thread]
 stat_sort_by_topic=Sort by Topic
 stat_sort_by_date=Sort by Date
-
+stat_byUser=by User
+stat_byTopic=by Topic
+stat_totalMessages=Total Messages
 
 cdfm_labels=Labels
 cdfm_newflag=New!
@@ -104,7 +118,7 @@ cdfm_duplicate_topic_confirm=Are you sure you wish to duplicate this topic?
 cdfm_duplicate_forum_confirm=Are you sure you wish to duplicate this forum?
 cdfm_insufficient_privileges_duplicate=You do not have privileges to duplicate this.
 cdfm_organize=Organize
-cdfm_statistics=Statistics
+cdfm_statistics=Statistics & Grading
 cdfm_template_setting=Template Settings
 cdfm_default_template_settings=Default Settings Template
 cdfm_default_template_settings_instruction=Settings from this template will apply each time a new Forum or Topic is created. You can override these settings for a specific Forum or Topic after it has been created.
@@ -673,3 +687,9 @@ pvt_back=Back
 #properties
 pvt_properties_desc=Set permissions for the Messages tool
 pvt_permissions=Permissions
+
+
+#group filtering:
+all_users=All Participants
+filter_by_group=Filter by group
+confirm_navigation=All unsaved grades will be lost
