--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -62,7 +62,7 @@ stat_forum_read = Foro le\u00EDdo
 stat_forum_authored = Foro creado
 
 cdfm_labels=Etiquetas
-cdfm_yes=Si
+cdfm_yes=S\u00ED
 cdfm_no=No
 cdfm_draft=Vista preliminar
 cdfm_discussion_forums=Foros 
@@ -84,7 +84,7 @@ cdfm_date=Fecha
 cdfm_thread=Hilo
 cdfm_collapse_expand_all=Expandir todo/Contraer todo
 cdfm_label=Etiqueta
-cdfm_other_actions = Otras acciones
+cdfm_other_actions = Mostrar/Ocultar acciones
 cdfm_display_options=Muestra opciones
 cdfm_forum_settings=Configurar foro
 cdfm_topic_settings=Configurar tema
@@ -130,14 +130,18 @@ cdfm_topic_author_identity=No deseo conocer la identidad de los autores
 cdfm_topic_post_before_reading=Envi\u00E1r antes de leer
 cdfm_topic_post_before_reading_desc=Los usuarios deben enviar una respuesta antes de leer las otras
 cdfm_topic_response_visibility=Visibilidad de las respuestas
-cdfm_lock_topic=Bloquear tema (Desabilita env\u00EDos del tema)
+cdfm_lock_topic=Bloquear tema (Deshabilita env\u00EDos del tema)
 cdfm_moderate_topic=Moderar tema
+cdfm_delete_topic_title=Borrar tema
 cdfm_delete_topic=\u00BFSeguro que desea borrar todos los temas y mensajes asociados con el tema?  \u00BFSeguro que desea borrar el siguiente tema y todos sus contenidos?
 cdfm_short_desc_too_long= La descripci\u00F3n corta no puede ser mayor de 255 caracteres
 cdfm_last_revise_msg= \u00DAltima revisi\u00F3n por
 cdfm_last_revise_msg_on= en 
-date_format=MMM d, yyyy K:mm a
-date_format_paren=\ (MMM d, yyyy K:mm a)\ 
+date_format=MMM d, aaaa K:mm
+date_format_date=MMM d, aaaa
+date_format_time=h:mm  
+date_format_paren=\ (MMM d, aaaa K:mm )\ 
+date_format_static=MMM d, aaaa h:mm z
 df_view=Ver
 cdfm_valid_forum_title_warn = Por favor, introduzca un t\u00EDtulo v\u00E1lido para el foro
 cdfm_valid_topic_title_warn = Por favor, introduzca un t\u00EDtulo v\u00E1lido para el tema
@@ -190,7 +194,7 @@ cdfm_deny_msgs_success= Los mensajes seleccionados se han denegado.
 cdfm_reply_deleted = El mensaje que est\u00E1 intentado contestar ha sido borrado. No puede responder a este mensaje.
 cdfm_no_assign_for_grade = Debe elegir una tarea ante de enviar la nota.
 cdfm_no_points_for_grade = Debe introducir los puntos de la nota antes enviar una calificaci\u00F3n.
-cdfm_delete_msg = \u00BFEst\u00E1 seguro de que desea borrar este mensaje y sus respestas? Si es as\u00ED, haga clic en "Borrar" para eliminar permanentemente este mensaje y sus respuestas. 
+cdfm_delete_msg = \u00BFEst\u00E1 seguro de que desea borrar este mensaje y sus respuestas? Si es as\u00ED, haga clic en "Borrar" para eliminar permanentemente este mensaje y sus respuestas. 
 cdfm_del_msg_has_reply = El mensaje que est\u00E1 intentado borrar tiene una respuesta. No puede borrar este mensaje.
 cdfm_deny_msg_has_reply = El mensaje que est\u00E1 intentado borrar tiene una respuesta. No se puede borrar este mensaje.
 cdfm_add_comment_invalid = Debe introducir un comentario.
@@ -320,7 +324,7 @@ pvt_advsearch= B\u00FAsqueda avanzada
 pvt_markread = Marcar los se\u00F1alados como le\u00EDdos
 pvt_pntformat= Versi\u00F3n imprimible  
 pvt_cmpmsg= Crear mensaje
-pvt_emptydelfol= Borrar los items seleccionados
+pvt_emptydelfol= Borrar los \u00EDtems seleccionados
 pvt_dispop= Mostrar opciones
 pvt_pvtmsg= Corre interno
 pvt_label = Etiqueta
@@ -417,6 +421,7 @@ pvt_select_msgs_to_delete = No hay mensaje seleccionados para el borrado.
 pvt_select_reply_recipients_list = Por favor, seleccione un destinatario para este mensaje de respuesta.
 pvt_select_msg_recipient = Debe seleccionar un destinatario antes de enviar el mensaje.
 pvt_missing_subject = Debe introducir un Tema antes de enviar este mensaje.
+pvt_missing_subject_draft =  Debe introducir un Tema antes de almacenar este mensaje.
 pvt_confirm_msg_delete = \u00BFEst\u00E1 seguro que desea borrar este mensaje? En caso afirmativo, pulse Borrar para borrar el mensaje.
 pvt_enter_search_text = Por favor, introduzca el texto de b\u00FAsqueda.
 pvt_no_message_mark_read= No ha seleccionado ning\u00FAn mensaje para marcarlo como le\u00EDdo. Por favor, seleccione un mensaje.
@@ -524,3 +529,93 @@ stat_sort_by_topic=Ordenar por Tema
 stat_topic_title=T\u00EDtulo del tema
 
 cdfm_state_inconsistent=No es posible completar su petici\u00F3n porque parece ser que usted est\u00E1 usando m\u00FAltiples pesta\u00F1as. Por favor, cierre todos sus navegadores e int\u00E9ntelo de nuevo. Si usted no estuviera usando m\u00FAltiples pesta\u00F1as, por favor, contacte con el administrador.
+
+all_participants_desc=Todos los participantes
+participants_group_desc=Grupo
+participants_role_desc=Rol
+t_preview=Previsualizar
+cdfm_forum_mark_read=Marcar Hilos Le\u00eddos
+cdfm_auto_mark_threads_read=Marcar Autom\u00e1ticamente Todos Los Mensajes en un Hilo como Le\u00eddos
+cdfm_forum_moderated_flag= ( Moderado ) 
+cdfm_moderated=moderado
+cdfm_notmoderated=no moderado
+
+cdfm_forum_availability=Disponibilidad
+cdfm_forum_avail_show=Mostrar - se muestra inmediatamente sin restricci\u00F3n temporal
+cdfm_forum_avail_date=Especificar fechas - mostrar a partir de una Fecha de Inicio (opcionalmente) especificado; ocultar despu\u00E9s de una Fecha de Fin (opcionalmente) especificada
+pickDate=Selecciona una Fecha
+openDate=Fecha de Inicio
+closeDate=Fecha de Fin
+endDateBeforeOpenDate=La fecha de fin no puede ser anterior a la de inicio.
+
+cdfm_full_description=Descripci\u00f3n completa
+perm_custom=que se pueden personalizar a continuaci\u00f3n:
+
+# Watch forums options
+watch=Notificaciones
+watch_forums_options=Consultar Opciones del Foro
+notify_for_all_postings=Notificarme por correo cada vez que se añade un nuevo mensaje
+notify_for_postings_to_my_thread=Notificarme por correo cuando un hilo al que he contribuido recibe un nuevo mensaje
+notify_none=Sin notificaciones
+
+cdfm_shortDescriptionCharsRem=%1 caracteres restantes
+cdfm_no_topics=No existen temas en este foro.
+cdfm_view = Ver
+cdfm_hide = Ocultar
+cdfm_attach = adjuntos
+
+cdfm_message_insert=Insertar texto original
+cdfm_message_count=N\u00FAmero de palabras
+cdfm_message_count_words=Palabras:
+cdfm_message_count_chars=Caracteres:
+cdfm_message_count_update: Actualizar el n\u00FAmero de palabras
+
+cdfm_readby= - Le\u00EDdo por: 
+
+cdfm_read_full_rep_tomessage=Leer mensaje al que se est\u00E1 contestando
+cdfm_hide_full_rep_tomessage=Ocultar mensaje al que se est\u00E1 contestando
+cdfm_reply_message_pref = Contestando a:
+
+# Email functions
+cdfm_button_bar_email=Correo
+
+#permalink
+cdfm_button_bar_permalink=Copiar enlace
+cdfm_button_bar_permalink_message=Copiar enlace para pegarlo en el correo
+
+# email notification text
+email.body.location=Sitio: 
+email.body.author=Autor: 
+email.body.msgtitle=T\u00EDtulo del mensaje: 
+email.body.msgposted=Mensaje enviado el:
+email.fromName=CourseWork
+email.fromAddress=no-reply@{0}
+email.subject=Nuevo mensaje publicado en {0} por {1}
+email.body.redirect1=Acceso al foro por 
+
+synoptic_no_tools=No existe la herramienta de foros en este sitio.
+synoptic_no_activity=No ha habido actividad reciente en tus sitios.
+
+# JSF Override
+javax.faces.validator.LengthValidator.MAXIMUM=Error de validaci\u00F3n: El campo tiene m\u00E1s caracteres de lo permitido ({0} caracteres)
+javax.faces.validator.LengthValidator.MINIMUM=Error de validaci\u00F3n: El campo no tiene un m\u00EDnimo de caracteres permitidos
+
+# preview:
+pvt_preview=Previsualizar
+pvt_back=Volver
+
+area_restricted_message=La plantilla se encuentra en modo de disponibilidad restringido
+forum_restricted_message=El foro se encuentra en modo de disponibilidad restringido
+topic_restricted_message=El hilo se encuentra en modo de disponibilidad restringido
+
+cdfm_labels=Etiquetas
+cdfm_newflag=\u00A1Nuevo!
+cdfm_gotonewtitle=Ir al siguiente nuevo mensaje
+cdfm_lastnewtitle=\u00DAltimo nuevo mensaje
+cdfm_gotopendtitle=Ir al siguiente mensaje pendiente
+cdfm_lastpendtitle=\u00DAltimo mensaje pendiente
+
+cdfm_gotofirstnewtitle=Ir al primer mensaje
+cdfm_gotofirstpendingtitle=Ir al primer mensaje pendiente
+cdfm_newflagparent=Nuevos mensajes
+cdfm_newflagresponses=Nuevos mensajes
