MSGCNTR-504 Mistakes in Spanish transtations Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@92379 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_es.properties
@@ -127,7 +127,7 @@ cdfm_topic_posting=Env\u00EDo del tema
 cdfm_topic_annonymous_responses=Respuestas an\u00F3nimas
 cdfm_topic_allow_anonymous_postings =Permitir respuestas an\u00F3nimas (La identidad la conocer\u00E1n los usarios administradores)
 cdfm_topic_author_identity=No deseo conocer la identidad de los autores
-cdfm_topic_post_before_reading=Envi\u00E1r antes de leer
+cdfm_topic_post_before_reading=Enviar antes de leer
 cdfm_topic_post_before_reading_desc=Los usuarios deben enviar una respuesta antes de leer las otras
 cdfm_topic_response_visibility=Visibilidad de las respuestas
 cdfm_lock_topic=Bloquear tema (Deshabilita env\u00EDos del tema)
@@ -347,7 +347,7 @@ pvt_autofor1= Auto-Reenviar correos internos:
 pvt_emailfor= Direcci\u00F3n de correo de reenv\u00EDo:
 pvt_saveset= Guarda configuraci\u00F3n
 pvt_detmsgreply= Detalle del correo interno
-pvt_send= Env\u00EDar
+pvt_send= Enviar
 pvt_send_as_private= Como mensaje
 pvt_send_as_email= a las direcciones de correo de los remitentes
 pvt_savedraft= Guarda vista preliminar
