MSGCNTR-36 Accessibility: Missing Table summary for the data table on the forums statistics page Applied patches
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@92381 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -693,3 +693,10 @@ pvt_permissions=Permissions
 all_users=All Participants
 filter_by_group=Filter by group
 confirm_navigation=All unsaved grades will be lost
+
+statistics_table_user=Forum statistics by user
+statistics_table_topic=Forum statistics by topic
+statistics_table_topic_user=Statistics by user for
+statistics_table_user_authored= Created messages forum statistics by user 
+statistics_table_user_read= Read messages forum statistics by user
+summary_all_messages_topic = All messages in topic 
