--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_ca.properties
@@ -582,4 +582,9 @@ viewSynopticInfo=Mostra el meus missatges nous i les meves contribucions noves a
 watch=Mostra
 watch_forums_options=Mostra les Opcions del Fòrum 
 
-
+statistics_table_user=EstadÌstiques del fÚrum per usuari 
+statistics_table_topic=EstadÌstiques del fÚrum per tema 
+statistics_table_topic_user=EstadÌstiques dels usuaris per 
+statistics_table_user_authored= EstadÌstiques sobre missatges creats per l'usuari 
+statistics_table_user_read= EstadÌstiques sobre missatges llegits per l'usuari
+summary_all_messages_topic = Tots els missatges del tema
