MSGCNTR-438 Add Ability to hide specific groups
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@94017 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -700,3 +700,9 @@ statistics_table_topic_user=Statistics by user for
 statistics_table_user_authored= Created messages forum statistics by user 
 statistics_table_user_read= Read messages forum statistics by user
 summary_all_messages_topic = All messages in topic 
+
+#hiddenGroups:
+hiddenGroups_hiddenGroups=Hidden Groups
+hiddenGroups_addGroup=Add Group
+hiddenGroups_selectGroup=--Select Group--
+hiddenGroups_remove=Remove
