MSGCNTR-335 Basque date format translation makes Message Center to crash Applied patch
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@94022 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_eu.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages_eu.properties
@@ -155,8 +155,10 @@ cdfm_delete_topic= Gai honekin zerikusia duten gai eta mezu guztiak ezabatzeko p
 cdfm_short_desc_too_long= Deskripzio laburrak ezin ditu gainditu 255 karaktere.
 cdfm_last_revise_msg= Azkenekoz editatu duena:
 cdfm_last_revise_msg_on= noiz 
-date_format=HHH e, uuuu o:mm a
-date_format_paren=\ (HHH e, uuuu o:mm a)\ 
+date_format=MMM d, yyyy K:mm a
+date_format_paren=\ (MMM d, yyyy K:mm a)\ 
+date_format_date=d MMM yyyy
+date_format_time=h:mm a
 df_view=Bista
 cdfm_valid_forum_title_warn = Sartu, arren, foroaren titulu baliodun bat
 cdfm_valid_topic_title_warn = Sartu, arren, gaiaren titulu baliodun bat
@@ -403,7 +405,7 @@ pvt_priority_high = Gutxikoa
 pvt_select_addtl_recipients = Aukeratu hartzaile gehigarriak
 #SAKAI-10505
 pvt_select_forward_recipients = Aukeratu aurrerako hartzaileak
-pvt_time_format= HH/ee/uu 'ordua' HH:mm:ss
+pvt_time_format= MM/dd/yy 'ordua' HH:mm:ss
 pvt_prev_msg =< Aurreko mezua
 pvt_next_msg = Hurrengo mezua >
 pvt_msgs_label = Mezuak - 
@@ -505,3 +507,15 @@ print_friendly = Bistaratu une honetako orriaren bertsio inprimagarria
 send_to_printer=Bidali inprimagailura
 close_window=Itxi leihoa
 print_url=javascript:window.print()
+
+#Nuevas en Configurar plantilla por defecto
+cdfm_forum_mark_read=Irakurritak bezala hariak markatu
+cdfm_auto_mark_threads_read= Hariko mezu guztiak irakurritak bezala automatikoki markatu. 
+perm_custom=Aukeratutako baimena jarraian egokitu dezakezu: 
+
+# Watch forums options
+watch=Ikusi
+watch_forums_options=Forumen aukerak ikusi
+notify_for_all_postings=Mezu berri bat bidaltzen denean niri ohartarazi posta elektroniko bidez. 
+notify_for_postings_to_my_thread=Mezu bat bidaltzen denean, nik parte hartu dudan hari batera, niri ohartarazi posta elektroniko bidez. 
+notify_none= Ez ohartarazi. 
