--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -112,6 +112,16 @@ cdfm_discussion_forums=Forums
 cdfm_discussion_forums_old=Discussion Forums
 cdfm_new_forum=New Forum
 cdfm_new_topic=New Topic
+cdfm_forum_inf_note=Note:   
+cdfm_forum_inf_no_topics= You need to add at least one topic.
+cdfm_forum_inf_all_topics_draft=All topics are draft. Topics saved as drafts cannot be seen by all participants.
+cdfm_forum_inf_no_forums=Participation cannot take place if there are no topics.  Only you or someone with your level of access can create topics.
+cdfm_forum_inf_init_guide=Use <strong>Forum Settings</strong> and <strong>Topic Settings</strong> to change the title and other details of this forum. <br />New forums and topics can only be created by you or someone with your level of access.<br />Use <strong>Template Settings</strong> to set up a template for all new forums.
+cdfm_forum_inf_all_forums_draft=All forums are draft. Forums saved as drafts cannot be seen by all participants.
+cdfm_forum_inf_no_topic_here=You need to add at least one topic for the forum above to be active.
+cdfm_forum_inf_no_topic_create=Create a topic?
+cdfm_forum_inf_no_forum_create=Create a forum?
+cdfm_forum_inf_no_forum_access=There may be forums that are not yet available for participation. Contact the site owner if you have questions about the status of a forum.
 cdfm_duplicate_topic=Duplicate Topic
 cdfm_duplicate_forum=Duplicate Forum
 cdfm_duplicate_topic_confirm=Are you sure you wish to duplicate this topic?
