--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -327,6 +327,8 @@ cdfm_add_comment = Add Comment to Denied Posting
 cdfm_add_comment_label = Add Comment:
 cdfm_insert_original_text_comment = Original Message:
 cdfm_reply_prefix=Re:
+cdfm_reply_message_note=Note: 
+cdfm_reply_message_mod_inst=contributions in this topic are moderated - only you and the moderator will be able to see your message until it is approved. If you are a moderator your post is automatically approved.
 
 cdfm_points_possible=({0} points possible)
 cdfm_null_points= - 
