--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -657,6 +657,7 @@ cdfm_button_bar_permalink_message=Copy link for pasting into email
 # Watch forums options
 watch=Watch
 watch_forums_options=Watch Forums Options
+watch_forums_options_instruction=Use the settings below to change what notifications <strong><u>you</u></strong> receive when activity in the forums of <strong><u>this</u></strong> site take place.
 notify_for_all_postings=Notify me by email whenever a new message is posted
 notify_for_postings_to_my_thread=Notify me by email when a thread that I have contributed to receives a new message
 notify_none=No notification
