MSGCNTR-531 - provide help to users setting grading options
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/MSGCNTR-528@94228 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -356,7 +356,12 @@ perm_revise_own=Edit Own
 perm_delete_any=Delete Any
 perm_delete_own=Delete Own 
 perm_mark_as_read=Mark as Read
-perm_choose_assignment=Gradebook Item: 
+perm_choose_assignment=Gradebook Item:
+perm_choose_instruction_forum=This will be the default in this forum's topics.
+perm_choose_instruction_topic=This will be the default when grading in this topic. 
+perm_choose_instruction_more_link=(More?)
+perm_choose_instruction_forum_more=You can override this association in the child topics by changing it in the Topic settings.
+perm_choose_instruction_topic_more=You can assign any grade item from the gradebook to contributions in this topic. This is just setting the default.
 
 perm_own=Own
 perm_all=All
