MSGCNTR-532 - UI scaffolding
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/MSGCNTR-528@94374 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
+++ b/messageforums-api/src/bundle/org/sakaiproject/api/app/messagecenter/bundle/Messages.properties
@@ -161,6 +161,7 @@ cdfm_previous_thread=< Previous Thread
 cdfm_full_description=Full Description 
 cdfm_read_full_description=View Full Description
 cdfm_hide_full_description=Hide Full Description
+cdfm_show_more_full_description=More?
 cdfm_read_full_rep_tomessage=View message you are replying to
 cdfm_hide_full_rep_tomessage=Hide message you are replying to
 
